--- a/meusite/src/style.css
+++ b/meusite/src/style.css
@@ -5,35 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(182, 182, 182);
+  background-color: #00aeff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.container{
-  text-align: center;
-  background: peru;
-  width: 50%;
-  margin: 0 auto;
-  border-radius: 2rem;
-}
-
-.btn{
-  border: 0;
-  padding: 0.5rem;
-  border-radius: 0.3rem;
-  color: black;
-  background: rgb(170, 170, 170);
-  font-size: 1rem;
-  font-weight: bold;
-  cursor: pointer;
-  margin-bottom: 0.5rem;
-  transition: 0.5s;
-}
-.btn:hover{
-  color: rgb(31, 30, 30);
-  background: rgb(122, 122, 122);
 }
